Fix topbar covering content error.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+#body {
+  margin-top: 60px;
+}
 form.signin { display: none; }
 form.baker label {
   font-size: 18px;
